# real-estate

./: .gitignore  .pre-commit-config.yaml  manage.py  pyproject.toml  setup.cfg
rs/: asgi.py  settings.py  urls.py  wsgi.py
rs/core/: apps.py  urls.py  views.py
rs/core/static/css/: style.css
rs/core/templates/: base.html
rs/core/templates/core/: about.html  index.html
rs/core/templates/partials/: _navbar.html
rs/listings/: admin.py  apps.py  models.py  urls.py  views.py
rs/listings/migrations/: 0001_initial.py  0002_rename_realter_listing_realtor.py  0003_alter_listing_options.py  0004_alter_listing_options.py
rs/listings/templates/listings/: listing.html  listings.html  search.html
rs/realtors/: admin.py  apps.py  models.py
rs/realtors/migrations/: 0001_initial.py
