[tool.poetry]
name = "real-estate"
version = "0.1.0"
description = ""
authors = ["Danilo Augusto <dasf_cm@terra.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.1"
python-decouple = "^3.4"
whitenoise = "^5.2.0"
dj-database-url = "^0.5.0"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]
black = "^21.5b0"
pylint = "^2.8.2"
isort = "^5.8.0"
pre-commit = "^2.12.1"
flake8 = "^3.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
